[gd_scene load_steps=13 format=2]

[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_5.png" type="Texture" id=1]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_6.png" type="Texture" id=2]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_1.png" type="Texture" id=3]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_3.png" type="Texture" id=4]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_4.png" type="Texture" id=6]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_0.png" type="Texture" id=7]
[ext_resource path="res://GFX/Enemies/Ushi Oni/sprite_7.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Enemies/Araña.gd" type="Script" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 4.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 49.4161, 14.482 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 70.9665, 29.8398 )

[node name="Araña" type="KinematicBody2D"]
position = Vector2( 1.71472, 1.08072 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 14.6947, -44.9369 )
frames = SubResource( 1 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.20279, 18.9212 )
shape = SubResource( 2 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( 68.7458, 27.4148 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2

[node name="Vanish" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="Dying" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="hurt" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="PositionMana" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5.11754, 4.55295 )
shape = SubResource( 3 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Vanish" to="." method="_on_Vanish_timeout"]
[connection signal="timeout" from="Dying" to="." method="_on_Dying_timeout"]
[connection signal="timeout" from="hurt" to="." method="_on_hurt_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
